Cambio del dobletap por el simple

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="gestionar">Gestiones</string>
     <string name="alquilado">Alquilado</string>
     <string name="propiedad">Propiedad:</string>
+    <string name="ajustes">Ajustes</string>
+    <string name="busqueda">Busqueda</string>
 </resources>
