--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="propiedad">Propiedad:</string>
     <string name="ajustes">Ajustes</string>
     <string name="busqueda">Busqueda</string>
+    <string name="settings">Settings</string>
+    <string name="search">Search</string>
+    <string name="favorite">Favorite</string>
 </resources>
