--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="settings">Settings</string>
     <string name="search">Search</string>
     <string name="favorite">Favorite</string>
+    <string name="salir">Salir</string>
 </resources>
